syntax = "proto3";

package sorpc.product;

option go_package = "proto/product";

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  string id = 1;
  string name = 2;
  int64 price = 3;
}

message CreateProductRequest {
  string id = 1;
  string name = 2;
}

message CreateProductResponse {
  string id = 1;
  string name = 2;
}